<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/silahkan_pilih_sumber_gambar_kalian"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"
                />
            
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#07A9FF"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    android:text="@string/kamera"
                    android:layout_marginEnd="10dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/teal_200"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp"
                    android:text="@string/galeri"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>